# CafeDB

./: README.md  cafedb.py  pyproject.toml  test_enhanced.cdb
CafeDB/: cafedb.py  init.py  main.py  usage.py
